added bot endpoints with doc and test case
