# routes/api.php
@@ -4,6 +4,7 @@ use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 use App\Http\Controllers\API\v1\AuthController;
 use App\Http\Controllers\API\v1\FolderController;
+use App\Http\Controllers\API\v1\BotController;
 
 /*
 |--------------------------------------------------------------------------
@@ -30,9 +31,14 @@ Route::group(['prefix' => 'v1'], function () {
         Route::get('user', [AuthController::class, 'userInfo'])->name('auth-user');
         Route::post('logout', [AuthController::class, 'logout'])->name('logout');
 
+        /** Bot API Endpoints Start */
+        Route::apiResource('bots', BotController::class);
+        /** Bot API Endpoints End */
+
         /** Folder API Endpoints Start */
         Route::apiResource('folders', FolderController::class);
         /** Folder API Endpoints End */
+
     });
 });
 
